cmake_minimum_required(VERSION 3.9)
project(knr C)

set(CMAKE_C_STANDARD 99)

add_executable(1.1 1_1.c)
add_executable(1.2 1_2.c)
add_executable(1.3 1_3.c)
add_executable(1.4 1_4.c)
add_executable(1.5 1_5.c)
add_executable(1.6 1_6.c)
add_executable(1.7 1_7.c)
add_executable(1.8 1_8.c)
add_executable(1.9 1_9.c)
add_executable(1.10 1_10.c)
add_executable(1.11 1_11.c)
add_executable(1.12 1_12.c)
add_executable(1.13 1_13.c)
add_executable(1.14 1_14.c)
add_executable(1.15 1_15.c)
add_executable(1.16 1_16.c)
add_executable(1.17 1_17.c)
add_executable(1.18 1_18.c)
add_executable(1.19 1_19.c)
add_executable(1.20 1_20.c)
add_executable(1.21 1_21.c)
add_executable(1.22 1_22.c)
add_executable(1.23 1_23.c)
add_executable(1.24 1_24.c)
add_executable(2.1 2_1.c)
add_executable(2.2 2_2.c)
