[package]
edition = "2021"
name = "the-next-big-thing"
version = "14.39.37-alpha"
homepage = "https://acme-corp.onion/the-next-big-thing"
keywords = ["metaverse", "ai", "crypto"]
license = "Mine! Mine!"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
anyhow = "1.0.89"
thiserror = "1.0.64"
validator = "0.18.1"
lazy_static = "1.5.0"
log = "0.4.22"
fern = "0.6.2"
once_cell = "1.20.1"
chrono = "0.4.38"
serde = "1.0.210"
tokio = "1.43.1"
rayon = "1.10.0"
